Added flask-script and blinker eggs to the list of required

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -61,6 +61,8 @@ eggs =
     flask-babel
     flask-gae-mini-profiler
     flask-assets
+    flask-script
+    blinker
     pytest-gae
     pycountry
     werkzeug-debugger-appengine
