Added wtforms and appropriate flask ext to the list of dependencies

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,7 @@ parts =
 find-links=
     https://bitbucket.org/petraszd/pytest_gae/get/tip.zip#egg=pytest-gae
     https://github.com/nshah/werkzeug-debugger-appengine/tarball/master#egg=werkzeug-debugger-appengine
+    https://github.com/miracle2k/webassets/tarball/master#egg=webassets-0.7
 
 
 # Generate relative paths for eggs so that the buildout can be moved around.
@@ -62,10 +63,13 @@ eggs =
     flask-gae-mini-profiler
     flask-assets
     flask-script
+    flask-wtf
+    wtforms
     blinker
     pytest-gae
     pycountry
     werkzeug-debugger-appengine
+#    webassets==0.7
 
 # Don't copy files that match these glob patterns.
 ignore-globs =
