--- a/buildout.cfg
+++ b/buildout.cfg
@@ -69,6 +69,7 @@ eggs =
     pytest-gae
     pycountry
     werkzeug-debugger-appengine
+    unidecode
 #    webassets==0.7
 
 # Don't copy files that match these glob patterns.
