--- a/gaetools.cfg
+++ b/gaetools.cfg
@@ -7,4 +7,7 @@ defaults =
     --mysql_user=root
     --mysql_password=
     --port=8090
+    --high_replication
+    --use_sqlite
+    --datastore_path=./ds.dump
     app
